# viewBuddy.ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 20260517_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  conversation.py  evaluators.py  interview_brain.py  interview_planner.py  prompts.py  providers.py
backend/app/ai/agents/: __init__.py  analyzer_agent.py  interviewer_agent.py  memory_agent.py  planner_agent.py  strategist_agent.py
backend/app/ai/models/: __init__.py  base.py  gemini.py  openai_compatible.py  router.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: ai_status.py  health.py  live_interview_ws.py  live_interviews.py
backend/app/core/: config.py  errors.py
backend/app/db/: base.py
backend/app/models/: ai_observability.py  analytics.py  answer.py  interview.py  mixins.py  resume.py  user.py
backend/app/schemas/: ai_status.py  health.py  live_interview.py
backend/app/services/: interview_state_machine.py  live_interview_service.py
backend/tests/: test_ai_evaluator.py  test_ai_status.py  test_cors_config.py  test_health.py  test_interview_brain.py  test_interview_planner.py  test_live_interviews.py  test_model_router.py  test_planner_agent.py  test_realtime_engine.py
docs/: ARCHITECTURE.md  DATABASE_AND_API.md  DEPLOYMENT_MVP.md  DEVOPS.md  OPEN_SOURCE_LLM_ARCHITECTURE.md  PRODUCT_FLOW.md  PROMPTS.md  ROADMAP.md
(+9 files in other folders)
