[project]
name = "ai-interview-copilot-backend"
version = "0.1.0"
description = "FastAPI backend for AI Interview Copilot"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
    "psycopg[binary]>=3.2.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
